finished initial majors + pledge_semesters autocorrect

--- a/notebook/autocorrect/autocorrect.ipynb
+++ b/notebook/autocorrect/autocorrect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +110,7 @@
     "    '''print(unit_tests())\n",
     "    spelltest(Testset(open('spell-testset1.txt')))\n",
     "    spelltest(Testset(open('spell-testset2.txt')))'''\n",
-    "    correct_wordset('input.txt', 'output.txt', correction)\n",
-    "    "
+    "    correct_wordset('tests/input/sp20_pledge_semesters.txt', 'tests/correct/sp20_pledge_semesters.txt', correction)"
    ]
   },
   {
